Had to create a new project because the old one had issues.

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ Java/Servers/Tomcat v8.0 Server at localhost-config/server.xml
 Java/Servers/Tomcat v8.0 Server at localhost-config/tomcat-users.xml
 Java/Servers/Tomcat v8.0 Server at localhost-config/web.xml
 Java/Face_Recognition/WebContent/META-INF/MANIFEST.MF
+gui/RoombaUI2/
